[gd_scene load_steps=8 format=3 uid="uid://c4b32d3nuxi0u"]

[ext_resource type="Script" path="res://cathode.gd" id="1_xhofl"]
[ext_resource type="Material" uid="uid://c4e2x4xtvrmo" path="res://node_3d.tres" id="2_3k150"]
[ext_resource type="Texture2D" uid="uid://bl4mchufvkbca" path="res://core.png" id="3_oxspj"]

[sub_resource type="TorusMesh" id="TorusMesh_obd1h"]
material = ExtResource("2_3k150")
inner_radius = 0.85
rings = 12
ring_segments = 4

[sub_resource type="TorusMesh" id="TorusMesh_jrgh8"]
material = ExtResource("2_3k150")
inner_radius = 0.65
outer_radius = 0.75
rings = 12
ring_segments = 4

[sub_resource type="TorusMesh" id="TorusMesh_y2min"]
material = ExtResource("2_3k150")
outer_radius = 0.575
rings = 12
ring_segments = 4

[sub_resource type="CylinderShape3D" id="CylinderShape3D_tsa5j"]
height = 0.5
radius = 0.25

[node name="Cathode" type="CharacterBody3D"]
script = ExtResource("1_xhofl")

[node name="Rings" type="Node3D" parent="."]

[node name="Outer" type="MeshInstance3D" parent="Rings"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
mesh = SubResource("TorusMesh_obd1h")
skeleton = NodePath("../Inner")

[node name="Inner" type="MeshInstance3D" parent="Rings"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
mesh = SubResource("TorusMesh_jrgh8")
skeleton = NodePath("../..")

[node name="Center" type="MeshInstance3D" parent="Rings"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
mesh = SubResource("TorusMesh_y2min")
skeleton = NodePath("../BulletTime")

[node name="Core" type="Sprite3D" parent="."]
texture = ExtResource("3_oxspj")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
shape = SubResource("CylinderShape3D_tsa5j")

[node name="BulletPoint" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)

[node name="BulletTime" type="Timer" parent="."]
wait_time = 0.12
one_shot = true

[connection signal="timeout" from="BulletTime" to="." method="_on_bullet_time_timeout"]
